--- a/src/kits/riot/components/Dialog/Dialog.css
+++ b/src/kits/riot/components/Dialog/Dialog.css
@@ -1,6 +1,6 @@
 .riot-dialog__popup {
   width: var(--riot-dialog-w);
-  max-width: 100%;
+  max-width: calc(100vw - 2 * var(--riot-space-5));
   transition:
     opacity var(--riot-dur) var(--riot-ease-out),
     transform var(--riot-dur) var(--riot-ease-out);
