--- a/src/kits/riot/components/Toast/Toast.css
+++ b/src/kits/riot/components/Toast/Toast.css
@@ -11,6 +11,7 @@
   right: 0;
   bottom: 0;
   width: 100%;
+  z-index: calc(1000 - var(--toast-index, 0));
   transform-origin: bottom right;
   transform:
     translateY(calc(var(--toast-index, 0) * -14px))
